# IP-GAME

./: .gitignore  INTERACTION.md  MANIFEST.in  README.md  SKILL.md  pyproject.toml  setup.py
.github/workflows/: python-tests.yml
agents/: openai.yaml
providers/: video.provider.json
src/ip_game/: asset_verify.py  character_prompts.py  cli.py  html_build.py  map_overview.py  map_prompt.py  node_prompts.py  video_from_images.py
src/ip_game/prompts/: __init__.py  character_sheet_prompt_template.md
src/ip_game/templates/: __init__.py  game.template.html
tests/: test_regressions.py
